hack/examples/ingress-with-annotations-and-labels.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    app.mintel.com/dex-k8s-ingress-watcher-client-id: ingress-kube-auth
    app.mintel.com/dex-k8s-ingress-watcher-redirect-uri: https://ingress.kube-auth.svc.cluster.local/oauth/callback
    app.mintel.com/dex-k8s-ingress-watcher-secret: ingress-kube-auth
  labels:
    name: example
  name: example
  namespace: kube-auth
spec:
  rules:
  - host: ingress.kube-auth.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: missing-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - ingress.kube-auth.svc.cluster.local
